RESOLVED FIXED69223
[Qt][WK2][Mac] WebKit2 does not build on mac after merge of Qt5 refactor branch.
https://bugs.webkit.org/show_bug.cgi?id=69223
Summary [Qt][WK2][Mac] WebKit2 does not build on mac after merge of Qt5 refactor branch.
Zeno Albisser
Reported 2011-10-02 08:27:18 PDT
SSIA
Attachments
patch for review. (3.55 KB, patch)
2011-10-02 08:44 PDT, Zeno Albisser
noam: review+
noam: commit-queue-
patch for review. - fixed ChangeLog (3.55 KB, patch)
2011-10-02 11:39 PDT, Zeno Albisser
no flags
patch for review. (1.02 KB, patch)
2011-10-03 03:27 PDT, Zeno Albisser
no flags
Zeno Albisser
Comment 1 2011-10-02 08:44:33 PDT
Created attachment 109422 [details] patch for review.
Noam Rosenthal
Comment 2 2011-10-02 10:20:39 PDT
Comment on attachment 109422 [details] patch for review. View in context: https://bugs.webkit.org/attachment.cgi?id=109422&action=review Patch looks good, please fix changelog before committing. > Source/WebCore/ChangeLog:10 > + No new tests. (OOPS!) This won't get committed with OOPS in it... should be something like "No new tests, build fix".
Zeno Albisser
Comment 3 2011-10-02 11:39:22 PDT
Created attachment 109425 [details] patch for review. - fixed ChangeLog
WebKit Review Bot
Comment 4 2011-10-02 12:53:37 PDT
Comment on attachment 109425 [details] patch for review. - fixed ChangeLog Clearing flags on attachment: 109425 Committed r96477: <http://trac.webkit.org/changeset/96477>
WebKit Review Bot
Comment 5 2011-10-02 12:53:41 PDT
All reviewed patches have been landed. Closing bug.
Zeno Albisser
Comment 6 2011-10-03 03:27:39 PDT
Created attachment 109460 [details] patch for review.
Zeno Albisser
Comment 7 2011-10-03 03:28:21 PDT
WebKitTestRunner does not build yet on mac.
WebKit Review Bot
Comment 8 2011-10-03 04:36:59 PDT
Comment on attachment 109460 [details] patch for review. Clearing flags on attachment: 109460 Committed r96489: <http://trac.webkit.org/changeset/96489>
WebKit Review Bot
Comment 9 2011-10-03 04:37:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.