[Qt][WK2][Mac] WebKit2 does not build on mac after merge of Qt5 refactor branch. https://bugs.webkit.org/show_bug.cgi?id=69223

Source/WebCore:

Add a missing import (NSWindow.h) in WebVideoFullscreenHUDWindowController.
Add a missing include path and a missing objective source file to WebCore.pro.

Patch by Zeno Albisser <zeno.albisser@nokia.com> on 2011-10-02
Reviewed by Noam Rosenthal.

No new tests, build fix.

* WebCore.pro:
* platform/mac/WebVideoFullscreenHUDWindowController.h:

Source/WebKit2:

After the merge of the Qt5 refactor branch, networking stuff has been
extracted into a separate library. The qmlplugin needs to link to that
library to get QNetworkReply defined.

Patch by Zeno Albisser <zeno.albisser@nokia.com> on 2011-10-02
Reviewed by Noam Rosenthal.

* UIProcess/API/qt/qmlplugin/qmlplugin.pro:

Canonical link: https://commits.webkit.org/85239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96477 268f45cc-cd09-0410-ab3c-d52691b4dbfc