third_party/WebKit/Tools/WebKitTestRunner/EventSenderProxy.h
@@ -28,6 +28,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef EventSenderProxy_h
 #define EventSenderProxy_h
 
+#if PLATFORM(QT)
+#include <Qt>
+#endif
+
 namespace WTR {
 
 class TestController;
